# mmtf-rs

./: .travis.yml  Cargo.toml  README.md
src/: binary_decoder.rs  codec.rs  de.rs  decode.rs  encode.rs  encoding.rs  lib.rs  mmtf.rs
tests/: test.rs
tests/data/: 173D.json  1AA6.json
