[package]
name = "mmtf"
version = "0.1.1"
authors = ["mgxm <i@mgxm.me>"]
license = "Apache-2.0"
description = "Macromolecular transmission format (MMTF) decoder and encoder"
keywords = ["mmtf", "macromolecular", "bio"]
categories = ["encoding", "science"]
repository = "https://github.com/mgxm/mmtf-rs"
readme = "README.md"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_bytes = "0.10"
rmp-serde = "0.13"
byteorder = "1.2"
itertools = "0.7"
num-traits = "0.2"
num-integer = "0.1"

[dev-dependencies]
serde_json = "1.0"